# covid-leningrad-region

./: .gitignore  README.rst  certificates.sh  docker-compose.override.yml  docker-compose.yml  env.example
.github/workflow/: scraper.yaml
.github/workflows/: dashboard-backend.yaml  dashboard-frontend.yaml  scraper.yaml
covid-page-mock/: Makefile
covid-page-mock/pages/: 06-11-21.html  14-12-21.html  24-10-21.html  25-10-21.html  26-10-21.html  27-10-21.html  28-10-21.html  29-10-21.html  30-10-21.html  31-10-21.html
dashboard-backend/: .dockerignore  Dockerfile  Makefile  README.rst  healthcheck.py  pyproject.toml
dashboard-backend/dashboard_backend/: __init__.py  config.py  cors.py  db.py  encoders.py  logging.py  main.py  routes.py
dashboard-backend/docs/source/: conf.py  index.rst
dashboard-backend/docs/source/_templates/: layout.html
dashboard-backend/tests/: conftest.py  test_dashboard_backend.py  test_db.py  test_routes.py
dashboard-frontend/: .dockerignore  Dockerfile  Makefile  README.rst  index.html  main.js  package-lock.json  package.json  style.css
dashboard-frontend/nginx/etc/nginx/conf.d/: default.conf
dashboard-frontend/src/: index.html  main.js  style.css
mongodb/: Makefile  README.md
mongodb/data/ssl/: ssl.conf
mongodb/docker-entrypoint-initdb.d/: mongo-init.js
scraper/: .dockerignore  Dockerfile  Makefile  README.rst  pyproject.toml
scraper/docs/source/: conf.py  index.rst
scraper/docs/source/_templates/: layout.html
scraper/scraper/: __init__.py  config.py  constants.py  db.py  decorators.py  exceptions.py  mail.py  main.py  models.py  parsers.py  types.py  utils.py
scraper/tests/: conftest.py  test_db.py  test_decorators.py  test_parsers.py  test_utils.py
scraper/tests/files/: page.html  page.json  page_next_day.json
