[tool.poetry]
name = "dashboard-backend"
version = "0.1.3"
description = ""
authors = ["Dmitrii Zakharov <dmitrii@zakharov.cc>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "3.8.1"
motor = "2.5.1"
aiohttp_cors = "0.7.0"
dparse = "0.6.2"

[tool.poetry.dev-dependencies]
pytest-cov = "4.0.0"
black = "22.12.0"
isort = "5.11.4"
flake8 = "6.0.0"
pydocstyle = "6.1.1"
bandit = "1.7.4"
safety = "2.3.5"
mypy = "0.991"
radon = "5.1.0"
pytest-aiohttp = "1.0.4"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autoapi = "^1.8.4"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
