[tool.poetry]
name = "scraper"
version = "1.1.11"
description = ""
authors = ["Dmitrii Zakharov <dmitrii@zakharov.cc>"]

[tool.poetry.dependencies]
python = "^3.8"
schedule = "1.1.0"
pymongo = {version = "3.11.3", extras = ["srv"]}
tenacity = "8.1.0"
pydantic = "1.10.13"
dparse = "0.6.2"

[tool.poetry.dev-dependencies]
pytest = "7.4.4"
pytest-cov = "4.1.0"
black = "22.8.0"
isort = "5.10.1"
flake8 = "5.0.4"
pydocstyle = "6.1.1"
bandit = "1.7.6"
safety = "2.2.0"
mypy = "0.981"
radon = "6.0.1"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autoapi = "^1.8.4"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true
implicit_reexport = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
